<resources>
    <string name="app_name">Simplitter</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_calculate">Calculate</string>
    <string name="action_main">Main</string>
    <string name="prompt_id">userId</string>
    <string name="prompt_email">abc123@example.com</string>
    <string name="prompt_amount">$ 0</string>
    <string name="prompt_number">0</string>
    <string name="prompt_activities">Activities Name</string>
    <string name="title_activity_calculate">CalculateActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


</resources>