<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="Simplitter for Bill Split"
        android:textAlignment="center"
        android:textSize="32dp"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_Login"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorButton1"
        android:onClick="LoginClick"
        android:text="@string/action_sign_in_short"
        android:textStyle="bold" />

    <TextView
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:text="Not registered yet?\nGo to Register first"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_Register"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorButton2"
        android:onClick="RegisterClick"
        android:text="REGISTER"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewValidation"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:textAlignment="center"
        android:textColor="#D30A0A"
        android:textSize="18sp" />


</LinearLayout>